// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout should render empty 1`] = `
Array [
  <div
    data-mock="Helmet"
  >
    {
  "htmlAttributes": {
    "lang": "en"
  },
  "meta": [
    {
      "name": "description",
      "content": "Site description"
    },
    {
      "name": "app-version",
      "content": "0.8.0"
    }
  ],
  "title": "Regular title"
}
  </div>,
  <div
    data-mock="Header"
  />,
  <div
    className="container"
  />,
]
`;

exports[`Layout should render with children 1`] = `
Array [
  <div
    data-mock="Helmet"
  >
    {
  "htmlAttributes": {
    "lang": "en"
  },
  "meta": [
    {
      "name": "description",
      "content": "Site description"
    },
    {
      "name": "app-version",
      "content": "0.8.0"
    }
  ],
  "title": "Regular title"
}
  </div>,
  <div
    data-mock="Header"
  />,
  <div
    className="container"
  >
    <div>
      Some child
    </div>
  </div>,
]
`;
